--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
   --text: #ffffff;
   --large-text: #A3A3A3;
   --large-text-inverse: #5C5C5C;
+  --large-text-light: #909090;
   --black: #000000;
   --horizontal-padding: 3rem;
+  --hero-animation-delay: 1.4s;
+  --large-cursor-radius: 20px;
 }
