--- a/styles/hero.css
+++ b/styles/hero.css
@@ -38,9 +38,20 @@
     animation: nav-highlighter-exit 0.4s forwards; /* Use exit animation when not hovering */
 }
 
-
 .hero {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
 
+.subtext {
+    flex-grow: 1;
+}
+
+.section--hero {
+    display: flex;
+    flex-direction: column;
+    height: 97vh;
 }
 
 .hero .page_title {
@@ -85,15 +96,18 @@
 .popin {
     transform: translateY(100%);
     animation: enterIn 1.2s ease-out 0s forwards;
+    animation-delay: var(--hero-animation-delay);
 }
 
 .popin-top {
     transform: translateY(-100%);
     animation: enterIn 1.2s ease-out 0s forwards;
+    animation-delay: var(--hero-animation-delay);
 }
 
 .slow {
     animation: enterIn 2s ease-out 0s forwards;
+    animation-delay: var(--hero-animation-delay);
 }
 
 .subtext {
@@ -104,13 +118,75 @@
     padding-top: 17.5rem;
 }
 
+
+.grey-circle-icon {
+    background-color: var(--large-text);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+}
+
+.grey-circle-icon i {
+    color: var(--black);
+}
+
+.hero-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 4rem;
+}
+
+.hero-bottom > div {
+    width: 100%;
+}
+
+.hero-bottom__center {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+.hero-bottom__left {
+    display: flex;
+}
+
+.hero-bottom__left > div {
+    width: 70%;
+}
+
+.hero-bottom__right {
+    display: flex;
+    justify-content: flex-end;
+    gap: 4px;
+}
+
+.hero-bottom__item {
+    cursor: pointer;
+}
+
+.hero-bottom__item > .text {
+    margin-right: 2rem;
+}
+
+.hero-bottom__item .arrow {
+    display: inline-block;
+    transform: rotateZ(-30deg);
+    transition: all 0.2s ease-out;
+}
+
+.hero-bottom__item:hover .arrow {
+    transform: rotateZ(0deg);
+}
+
 @keyframes enterIn {
     100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
-
 
 @keyframes nav-highlighter-exit {
     0% {
