--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('./styles/locomotive.css');
 @import url('./styles/globals.css');
 @import url('./styles/utils.css');
 @import url('./styles/base.css');
 @import url('./styles/hero.css');
+@import url('./styles/portfolio_section.css');
+@import url('./styles/client_list.css');
 @import url('./styles/overlay.css');
 @import url('./styles/cursor.css');
