--- a/styles/cursor.css
+++ b/styles/cursor.css
@@ -1,12 +1,13 @@
 .circle {
     position: fixed;
-    height: calc(2 * var(--large-cursor-radius));
-    width: calc(2 * var(--large-cursor-radius));
+    height: calc(2 * var(--small-cursor-radius));
+    width: calc(2 * var(--small-cursor-radius));
     background-color: white;
     border-radius: 50%;
-    top: calc(var(--large-cursor-radius) * -1);
-    left: calc(var(--large-cursor-radius) * -1);
+    top: calc(var(--small-cursor-radius) * -1);
+    left: calc(var(--small-cursor-radius) * -1);
     pointer-events: none;
-    z-index: 9;
+    z-index: 10;
     mix-blend-mode: difference;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
