--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,5 +7,5 @@
   --black: #000000;
   --horizontal-padding: 3rem;
   --hero-animation-delay: 1.4s;
-  --large-cursor-radius: 20px;
+  --small-cursor-radius: 8px;
 }
