--- a/styles/hero.css
+++ b/styles/hero.css
@@ -59,13 +59,13 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    text-transform: uppercase;
 }
 
 .heading-large {
-    font-size: 10vw;
+    font-size: 9.3vw;
     font-weight: 500;
     color: var(--large-text);
+    text-transform: uppercase;
 }
 
 .product {
@@ -182,6 +182,12 @@
 }
 
 @keyframes enterIn {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
     100% {
         transform: translateY(0px);
         opacity: 1;
