--- a/styles/portfolio_section.css
+++ b/styles/portfolio_section.css
@@ -33,15 +33,17 @@
 .hover_img_container {
     width: 273px;
     height: 273px;
+    pointer-events: none;
 }
 
 .project_container .hover_img_container {
     position: absolute;
     z-index: 1;
-    display: none;
+    /* display: none; */
+    opacity: 0;
     transition: all 0.4s ease-out;
 }
 
 .project_container:hover .hover_img_container {
-    display: block;
+    /* display: block; */
 }
